[package]
name = "linkly"
version = "0.1.0"
edition = "2021"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = { version = "0.5.1", features = ["json"] }
serde = "1.0.188"
futures = "0.3.28"
tokio = { version = "1.32.0", features = ["full"] }
chrono = "0.4"                                                                  # Used for setting DateTimes
dotenv = "0.15.0"
sqlx = { version = "0.7", features = ["postgres", "runtime-tokio-native-tls", "macros"] }
regex = "1"
redis = "0.8.0"
deadpool-redis = "0.10"

[dependencies.uuid]
version = "1.8.0"
features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]

[dependencies.rocket_db_pools]
version = "0.2.0"
features = ["sqlx_postgres", "deadpool_redis"]
